[project]
name = "rl-games"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium>=1.2.3",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pygame>=2.6.1",
    "seaborn>=0.13.2",
    "swig>=4.4.1",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]
